test: add unit & e2e tests
Squashed commit of the following:

commit d58424e8f8c2ecbae9150d210ce9bf2dd196adad
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 11:30:15 2023 +0400

    refactor: regroup e2e tests

commit de20806977b5261f4062f8c642590fd94bc7ae03
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 10:21:19 2023 +0400

    test(e2e): add access-token refreshing tests

commit 970afcadb4159100b95cd2535e4162ff37ea6ec2
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 09:32:11 2023 +0400

    test(e2e): add fail-cases for user-authentication

commit 8b9817b3d252a3f8aa2856e87cffc8c2fd7a7acb
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 09:23:01 2023 +0400

    test(e2e): add fail-cases for user-registration tests

commit a6df48bb5fa612847757df3035091edab232921b
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 06:00:07 2023 +0400

    test(e2e): add user-authentication tests

commit e26975b86bf4a408e2770442d7b93e752ccb65d1
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 05:54:58 2023 +0400

    test(e2e): add user registration tests

commit 26c9e9cf1205022a9bace0a39f1c4b9714ceb0fe
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 05:44:10 2023 +0400

    test(e2e): setup custom test sequencer

commit 68508df606c0bd7c9dde8ee375ef4bbf6e9088fa
Author: Harivansh <hello@harivan.sh>
Date:   Thu Oct 26 13:10:22 2023 +0400

    test(e2e): add RegistrationController tests

commit 1f39b9e5e8db6b3ff95640e842e4021b379b9fb1
Author: Harivansh <hello@harivan.sh>
Date:   Thu Oct 26 12:01:09 2023 +0400

    chore: move todos to todo.md & add new tasks

commit 8757f5f2596b7f9c809cc4e3934d4c105984f424
Author: Harivansh <hello@harivan.sh>
Date:   Thu Oct 26 09:35:05 2023 +0400

    test(unit): add AuthenticationController tests

commit e57ab42d89619d676f7387b6cb18d78096008861
Author: Harivansh <hello@harivan.sh>
Date:   Thu Oct 26 09:34:44 2023 +0400

    chore: add task

commit 46a83733e99f2c8427431fab82cc111f14fa4131
Author: Hari

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "super-app-server",
-  "version": "0.0.1",
-  "description": "The server of the Super-App project.",
+  "name": "application",
+  "version": "0.1.0",
+  "description": "Base NestJs application with JWT authentication.",
   "author": "Harivansh",
   "private": true,
   "license": "UNLICENSED",
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest.config.ts",
+    "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@jest/test-sequencer": "^29.7.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
