feat: implement application routes pretty-printing
Squashed commit of the following:

commit 46c8449ccb87d3d4cfdbf6cf8baacc11445e883c
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 12:50:23 2023 +0400

    feat: add `route:list` script

commit 8d3b54bbb4a6892ee9b578d70393a3aa76177f1c
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 12:46:07 2023 +0400

    feat: implement routes pretty-printer script

commit 7dc84ee1120690da95674705fec6156842b210b0
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 12:44:15 2023 +0400

    refactor: use IIFE as main function

commit 54df19f005901d0ca149de0d2b342558bbf20f33
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 11:34:33 2023 +0400

    fix: remove nest-commander package

commit 53e0155e7ba3862427567a951e9cdafa5d3d8e27
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 07:50:02 2023 +0400

    refactor!: move user-registration controller to dedicated directory

commit 44d0f3bf2260a25b2f699c423eb14f79abee7a8a
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 07:47:29 2023 +0400

    fix: rewrite randomly failing `expiresAt` test

commit c3de44c386160bcaaa297bba192acbb41ad94fc4
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 07:46:13 2023 +0400

    chore: add task

commit 84b92d5df2d54cb3432b5a20e9d2dafd4c345761
Author: Harivansh <hello@harivan.sh>
Date:   Fri Oct 27 21:00:29 2023 +0400

    feat: add nest-commander package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
+    "route:list": "yarn ts-node ./src/_command/script/route.script.ts",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -59,6 +60,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "express-list-routes": "^1.1.9",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.1",
