feat!: implement key-generation script
Squashed commit of the following:

commit 40da649390079648ff374de16c4b170c2d79a616
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 12:17:04 2023 +0400

    chore: remove the key-generation tasks

commit 085ae1dceed205308829075fd5ba9f844e900e32
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 12:04:58 2023 +0400

    refactor!: rewrite key-generation script without nest-commander

commit 7de718251d1d5dd55826c0b0b6ee0036e71bde85
Author: Harivansh <hello@harivan.sh>
Date:   Sun Oct 29 09:23:05 2023 +0400

    test(wip): test key generation

commit 1c2c993ff271aa238e61aa59f989ccb6c6ce89a1
Author: Harivansh <hello@harivan.sh>
Date:   Sun Oct 29 08:29:56 2023 +0400

    refactor: rename test files

commit 9ad21faba525afa65386e830a772bbfe201b92cc
Author: Harivansh <hello@harivan.sh>
Date:   Sun Oct 29 08:28:45 2023 +0400

    test(unit): add `GenerateKeysCommand` tests

commit 426b085174b8d7db4dd0d6f7e84f525a5960b604
Author: Harivansh <hello@harivan.sh>
Date:   Sun Oct 29 08:27:26 2023 +0400

    fix: increase dp for `expiresAt` check

commit 125203efde10cc1f6ffb49edea3d0ea4400b6564
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 19:47:37 2023 +0400

    chore: regenerate access & refresh token keys

commit f1001c0162ad3c8d1375eb8d044d50f990a980db
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 19:47:02 2023 +0400

    feat: implement key-generation script

commit 02266678d522cba20e21ac3247d0588003f68291
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 13:05:57 2023 +0400

    refactor: update `CommandModule` registration priority

commit d4b7245cfbf44d03eaea4780711fb8749467000b
Author: Harivansh <hello@harivan.sh>
Date:   Sat Oct 28 13:05:16 2023 +0400

    fix: add `nest-commander` package

--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,11 @@ DATABASE_PASSWORD="superapp"
 DATABASE_NAME="superapp"
 
 
-#-------------------------#
-# Customer Authentication #
-#-------------------------#
-JWT_ACCESS_TOKEN_SECRET="nyenUxNWwqGxbHiATA8HDenICqazHpnL"
+#---------------------#
+# User Authentication #
+#---------------------#
+JWT_ACCESS_TOKEN_SECRET="REPLACE WITH A RANDOM STRING"
 JWT_ACCESS_TOKEN_DURATION="15 minutes"
 
-JWT_REFRESH_TOKEN_SECRET="Kcz6rShzm5T0MFpW1vmXrKpCc1bZ54qY"
+JWT_REFRESH_TOKEN_SECRET="REPLACE WITH A RANDOM STRING"
 JWT_REFRESH_TOKEN_DURATION="1 week"
