--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "test": "jest",
+    "test:unit": "jest",
+    "test:cli:unit": "jest --config ./cli/jest.config.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
-    "route:list": "yarn ts-node ./src/_command/script/route.script.ts",
+    "route:list": "yarn run ts-node ./cli/script/route.script.ts",
+    "key:generate": "yarn run ts-node ./cli/script/generate-keys.script.ts --length 64 --env-file .env --env-keys JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -55,8 +57,10 @@
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.36",
     "@types/supertest": "^2.0.12",
+    "@types/yargs": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "chalk": "^4",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -72,7 +76,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "yargs": "^17.7.2"
   },
   "packageManager": "yarn@3.6.4"
 }
