--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^7.0.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "ms": "^2.1.3",
