feat: setup rate-limiting
Squashed commit of the following:

commit 69963b5d04690788bfc1e77500bc71307faf61af
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 16:53:33 2023 +0400

    feat: setup application-level rate-limiting

commit 929104625cda7f257ba0cc62401c67957ab05cc1
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 16:16:25 2023 +0400

    fix: add @nestjs/throttler package

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ NODE_ENV="development"
 APPLICATION_NAME="Super-App"
 APPLICATION_PORT=3000
 
+# Throttling
+APPLICATION_THROTTLER_TTL_SECONDS=60
+APPLICATION_THROTTLER_LIMIT=5
+
 
 #----------#
 # Database #
