--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/terminus": "^10.1.1",
+    "@nestjs/throttler": "^5.0.1",
     "argon2": "^0.31.1",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
