refactor: minor refactoring
Squashed commit of the following:

commit ec434c8868350b349d5133efefb5a0b69e7377c6
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 21:04:35 2023 +0400

    refactor: rename environment variables option

commit a22e84eae6f204454c6a412d01e38e6d508a11d3
Author: Harivansh <hello@harivan.sh>
Date:   Mon Oct 30 21:03:56 2023 +0400

    doc: add @todo annotation hack for vscode todo-tree

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
     "route:list": "yarn run ts-node ./cli/script/route.script.ts",
-    "key:generate": "yarn run ts-node ./cli/script/generate-keys.script.ts --length 64 --env-file .env --env-keys JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET",
+    "key:generate": "yarn run ts-node ./cli/script/generate-keys.script.ts --length 64 --env-file .env --env-vars JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET",
     "postinstall": "husky install"
   },
   "dependencies": {
