refactor!: general refactor
Squashed commit of the following:

commit 5b204f6b0873432cbd76f53f10c2560222c1645e
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 14:18:38 2023 +0400

    refactor: change script calling predicate

commit c2e685ab109877ae60d13a0d98320e91f8092f8c
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 13:55:02 2023 +0400

    fix: use `ms` for a uniform throttler config

commit 2a0c3c97b248e5904bec4f61cb9c5f24dcdef31a
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 10:42:40 2023 +0400

    refactor!: move application-related modules to a dedicated module

commit cdbabe70d51a60060a3c7803f6a65686b06bf258
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 10:42:07 2023 +0400

    chore: add task

commit 60fd9a05dd01b506374dea9c2771226913e5259e
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 10:38:12 2023 +0400

    chore: add todo

commit 6e8e5549baf3402f3cec3b5f8f8cc15671f87301
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 10:37:46 2023 +0400

    chore: remove task

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ APPLICATION_NAME="Super-App"
 APPLICATION_PORT=3000
 
 # Throttling
-APPLICATION_THROTTLER_TTL_SECONDS=60
-APPLICATION_THROTTLER_LIMIT=5
+APPLICATION_THROTTLER_TTL="1 minute"
+APPLICATION_THROTTLER_REQUEST_LIMIT=5
 
 
 #----------#
