feat: implement user-seeding
Squashed commit of the following:

commit 43bcd75f4c7ae0f884db4673c61073acbab35725
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 22:16:45 2023 +0400

    chore: add task

commit 18d5549e4389ed9d72ee7a5d7d6eb6b664563414
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 22:15:42 2023 +0400

    feat: implement user seeding

commit fd25d682a778c25b4ba6e0a46260f84bfbc776c5
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 22:14:43 2023 +0400

    doc: add new task

commit e9364b0957eec4a39e8e6f15a49d1afece0047bd
Author: Harivansh <hello@harivan.sh>
Date:   Tue Oct 31 21:54:26 2023 +0400

    fix: add @faker-js/faker

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@jest/test-sequencer": "^29.7.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
