chore: fix app name & db credentials

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NODE_ENV="development"
 #-------------#
 # Application #
 #-------------#
-APPLICATION_NAME="Super-App"
+APPLICATION_NAME="Application"
 APPLICATION_PORT=3000
 
 # Throttling
@@ -21,10 +21,10 @@ APPLICATION_THROTTLER_REQUEST_LIMIT=5
 DATABASE_HOST="localhost"
 DATABASE_PORT=27017
 
-DATABASE_USERNAME="superapp"
-DATABASE_PASSWORD="superapp"
+DATABASE_USERNAME="application"
+DATABASE_PASSWORD="application"
 
-DATABASE_NAME="superapp"
+DATABASE_NAME="application"
 
 
 #---------------------#
