refactor!: general refactoring
Squashed commit of the following:

commit ec759d74aac9e789f072ed77023821d2748de9e1
Author: Harivansh <hello@harivan.sh>
Date:   Tue Nov 14 08:45:12 2023 +0400

    chore: remove unnecessary task

commit 43929fd953f7b068d4ad0d4a213ba18bb3e7f71e
Author: Harivansh <hello@harivan.sh>
Date:   Tue Nov 14 08:33:48 2023 +0400

    refactor: rename types

commit d2a1b95fa3552be0e8053b643b47dceb8249011a
Author: Harivansh <hello@harivan.sh>
Date:   Tue Nov 14 07:47:53 2023 +0400

    refactor: replace `ConfigService` with `ConfigurationService`

commit 9584f6df623bcb842c073fdc882f1e7533292cb3
Author: Harivansh <hello@harivan.sh>
Date:   Tue Nov 14 07:47:14 2023 +0400

    refactor: rename config query method to `getOrThrow`

commit 7836420fcc0aeec8d3d87cf46af4524af721d40b
Author: Harivansh <hello@harivan.sh>
Date:   Mon Nov 13 23:48:56 2023 +0400

    feat: implement `Configuration` module & service

commit 917c50c0699cb0d00c7c061d7fc1a97c0ea8bec9
Author: Harivansh <hello@harivan.sh>
Date:   Sun Nov 12 21:58:49 2023 +0400

    refactor: add typings to mocks

commit 46bb056a65ec226194d814c14256e1968471c25c
Author: Harivansh <hello@harivan.sh>
Date:   Sun Nov 12 21:07:55 2023 +0400

    refactor!: re-write `UserService` methods

commit 1feb8483bc0d2526cae07886d754b050a2637ab4
Author: Harivansh <hello@harivan.sh>
Date:   Sun Nov 12 11:04:05 2023 +0400

    refactor: move `IsUnique` validator to dedicated `_library` module

commit bc1be07712951be388e4a4d0040eab97bc3523e2
Author: Harivansh <hello@harivan.sh>
Date:   Thu Nov 9 08:05:48 2023 +0400

    refactor: test & clean `IsUnique` validator

commit 6104543eabbad6630ceac56e70c0dae63ba77736
Author: Harivansh <hello@harivan.sh>
Date:   Thu Nov 9 08:05:00 2023 +0400

    chore: add task

commit 39f3a032b4c7c808a075cc68e26f6d70c0922327
Author: Harivansh <hello@harivan.sh>
Date:   Thu Nov 9 06:59:47 2023 +0400

    fix(wip): generalize `IsUnique` validation decorator

commit 5686ae76b857f795858d1c9dda4ae

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
@@ -13,10 +16,18 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noPropertyAccessFromIndexSignature": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedParameters": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "strict": true
   }
 }
