--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "yarn node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
     "key:generate": "yarn run ts-node ./cli/script/generate-keys.script.ts --length 64 --env-file .env --env-vars JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET",
-    "db:seed": "yarn run ts-node ./cli/script/seed.script.ts",
+    "db:seed": "yarn run ts-node --files --require tsconfig-paths/register ./cli/script/seed.script.ts",
     "postinstall": "husky install"
   },
   "dependencies": {
