fix!: re-implement application authentication
Squashed commit of the following:

commit a81cd693eeb29a58879cdfe466b75243fdfff54a
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 21:17:02 2023 +0400

    refactor: move `Request` type declaration

commit 6da876f3ab2af5bab5820c85575a7f04fa5ee80a
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 21:10:31 2023 +0400

    refactor: extract `MS_DURATION_PATTERN` to library constant module

commit a26dc71032747f516c0e1b807ea33c3060af8154
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 21:07:27 2023 +0400

    fix: correct http-header const enum

commit 20cc7a9dd8ce4ace252bdd809242abe1d1534d7f
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 21:05:59 2023 +0400

    fix: correct http-header const enum

commit 0de2e5771303f8e2dfbc2814841898c8fbaab017
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 21:04:42 2023 +0400

    fix: throw `UnauthorizedException` instead of returning `false`

commit a8c46540d2c1d6f8c9f0f20b653530d0d1fcf9b0
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 19:24:43 2023 +0400

    fix: remove @nestjs/passport, passport, passport-jwt, and associated types

commit 23f2dbee869c157f7068ea01dea4b0d139791907
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 19:22:53 2023 +0400

    fix: add express-request user type

commit d6a820498a1e8079e0eb5cf0903ef292e1a7fcd3
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 18:53:41 2023 +0400

    fix: guards & imports

commit e6ca46b0705ada4ab996005e12df131ac84bb026
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 18:48:44 2023 +0400

    fix: update imports & providers

commit 87c46eeeb332bbfee2ccd1e538b674dcbfc3f7ed
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 18:43:19 2023 +0400

    fix: use new token-generation methods

commit f0069d92bec53a6380c169f1686614c35d010d44
Author: Harivansh <hello@harivan.sh>
Date:   Thu Dec 14 18:33:34 2023 +0400

    fix: set logger context

commit ddc2a75ec17

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "yarn node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest.config.ts --runInBand",
     "test:all": "yarn run test:unit && yarn run test:cli:unit && yarn run test:e2e",
-    "key:generate": "yarn run ts-node ./cli/script/generate-keys/script.ts --length 64 --env-file .env --env-vars JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET",
+    "key:generate": "yarn run ts-node ./cli/script/generate-keys/script.ts --length 64 --env-file .env --env-vars USER_JWT_ACCESS_TOKEN_SECRET USER_JWT_REFRESH_TOKEN_SECRET",
     "db:seed": "yarn run ts-node --files --require tsconfig-paths/register ./cli/script/seeder/script.ts",
     "postinstall": "husky install"
   },
@@ -34,7 +34,6 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
-    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/terminus": "^10.1.1",
     "@nestjs/throttler": "^5.0.1",
@@ -51,9 +50,6 @@
     "mongoose": "^7.6.2",
     "ms": "^2.1.3",
     "nodemailer": "^6.9.7",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "winston": "^3.11.0",
@@ -73,8 +69,6 @@
     "@types/ms": "^0.7.33",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
-    "@types/passport-jwt": "^3.0.10",
-    "@types/passport-local": "^1.0.36",
     "@types/supertest": "^2.0.12",
     "@types/yargs": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
