fix!: update dependencies
Squashed commit of the following:

commit 05c841d5e7891d663d1d7ddc01460ca0ec5a3dfa
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 13:53:54 2024 +0400

    chore: update eslint ignore comment

commit 7ed3f995d668daf35cf0e71a5c94cf5cee1246ba
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 13:53:27 2024 +0400

    fix(lint)!: update eslint & associated dependencies

commit ce14b0615c2856e8b79006513fa6d25979b1577d
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 12:18:18 2024 +0400

    fix: update supertest package

commit 2c007eca708595a60f74e0b8e099164db9575c39
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 11:43:46 2024 +0400

    fix: update @types/node package

commit c422208e0e795e188299bd78be9237e7487b5bf6
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 11:40:05 2024 +0400

    fix: update dependencies

commit 111c801267f6b87bf82912f81c16d0208a8fd1a0
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Aug 23 10:59:36 2024 +0400

    doc: update README

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,12 @@
-# compiled output
+# Compiled output
 /dist
+
+# NPM
+/node_modules
+
+# Yarn (berry)
+.yarn
+.pnp.*
 
 # IDE - VSCode
 .vscode
-
-# Yarn Berry
-.yarn
-.pnp.*
