feat(cli)!: setup client app cli for db drop & seed
Squashed commit of the following:

commit 7ed68b258849c6ae39b94a8e2f2c267f21d81653
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 23:44:12 2024 +0400

    feat(cli): setup database-drop command

commit 69ce15291af461a3e2e274a0f4d323685524e678
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 23:11:44 2024 +0400

    feat(cli): setup database-seeding subcommand

commit 990d5b06434138e2ea6b118f5dac4faf73b4d539
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 22:46:41 2024 +0400

    doc: add client-app readme

commit a487ea0791d5426462a291c16b11dd1fe5493cac
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 22:25:20 2024 +0400

    refactor: update compiled assets outdir

commit 74d88296c9a73496be60421d487446e9e12ea7ec
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 21:36:53 2024 +0400

    feat: implement user seeding

commit ca42f4b9eca8df420d697719a3973527ba09d29e
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 20:48:23 2024 +0400

    doc: remove todo

commit 4cb0a94fb558a47521ccd673b33f11f64ea1f438
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 16:52:33 2024 +0400

    fix: update authentication module to use `UserService`

commit 7ec891b8683252f2ae474d771499a046514f84c8
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 16:48:30 2024 +0400

    refactor!: export `UserService` instead of `UserRepository`

commit 7cc9a0fdd20c76a3f2052e2be2dc02370966caa5
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 16:47:47 2024 +0400

    refactor: add constructor to `User` schema

commit b3de3cf99218e76132f69ee25d36ea1866203b77
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 16:43:11 2024 +0400

    refactor: update `findById` to accept `ObjectId`

commit 4799b393a5d542848298ea0c395754fbe3b8c1cd
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Aug 25 16:42:16 2024 +0400

    feat: implement user-quer

--- a/apps/administration/tsconfig.app.json
+++ b/apps/administration/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/administration"
+    "outDir": "../../dist/administration"
   },
   "include": ["src/**/*"],
   "exclude": ["**/*.spec.ts"]
