--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/client"
+    "outDir": "../../dist/client"
   },
   "include": ["src/**/*"],
   "exclude": ["**/*.spec.ts"]
