--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "scripts": {
     "lint": "eslint",
     "format": "prettier --cache --cache-location ./.prettiercache --write .",
+    "cli:client": "nest start --path ./apps/client/tsconfig.cli.json --entryFile ./apps/client/cli/main.js --",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:dev:debug": "nest start --debug --watch",
-    "prod:client": "node dist/apps/client/apps/client/src/main",
-    "prod:administration": "node dist/apps/administration/apps/administration/src/main",
+    "prod:client": "node dist/client/apps/client/src/main.js",
+    "prod:administration": "node dist/administration/main.js",
     "test:unit": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.0",
+    "@faker-js/faker": "^8.4.1",
     "@jest/test-sequencer": "^29.7.0",
     "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.1.4",
@@ -59,6 +61,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.9",
     "mongodb-memory-server": "^10.0.0",
+    "nest-commander": "^3.15.0",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
