--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^10.4.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/terminus": "^10.2.3",
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
