feat!: add mail module
Squashed commit of the following:

commit 7f8c001281fb84d59d495f049a37409f5a46dd8d
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Oct 4 16:11:44 2024 +0400

    doc: add readme

commit d1535e06c45faf48778eafd1a18e97d331f3d473
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Oct 4 16:01:23 2024 +0400

    test(e2e): add mail library tests

commit fc65127dd40558bf90c9836d77203e7413fd4ea4
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Oct 4 15:55:51 2024 +0400

    fix: update @types/html-to-text & add axios packages

commit a0e92dadd474327d4e8f18a1fe50ca8837f1b154
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Oct 4 09:29:17 2024 +0400

    refactor: hard-code database host

commit 5d012be7eeb1fd9c336893ad37856b6472bba23c
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 22:47:52 2024 +0400

    feat: implement `Mail` model

commit f02e7302a69eca073c8c9b849d4da4796029b25a
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 21:26:15 2024 +0400

    feat: implement mail service

commit 57ca6f84075ff86ded9f4e2a033b7e56eb51bd17
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 21:25:27 2024 +0400

    feat: add `isGlobal` config flag

commit e9e4ebb6daf84042d2b47e403b8d2ad6ea9f36ec
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 21:24:13 2024 +0400

    feat(dev): add mailpit service

commit 31cab780f1210bdf3c60f6aa432a0fe7a7cc5c57
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 21:23:00 2024 +0400

    fix: add mail library path resolution config

commit 7ad362c3a1c3835a4e131b8df6a102cec741401b
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Oct 3 21:21:46 2024 +0400

    fix: add mjml, html-to-text, html-minifier, & mustache packages

commit 69493b39a1ee194c9bd9d26e74fa7c252d6f49cc
Author: Harivansh <leharivansh@gmail.com>
Date:   Tue Oct 1 19:33:45 2024 +0400

    feat: setup base mailing system

commit 463ea5c2fe64292b752d23caf592559c35051192
Author: Harivansh <l

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,19 @@
 #---------#
 # MongoDB #
 #---------#
-__MONGODB_HOST="localhost"
 __MONGODB_PORT=27017
 
 __MONGODB_USERNAME="username"
 __MONGODB_PASSWORD="password"
 
-__MONGODB_DATABASE_NAME="application"
+__MONGODB_DATABASE_NAME="nestradamus"
+
+
+#---------#
+# MailPit #
+#---------#
+__MAILPIT_SMTP_PORT=1025
+__MAILPIT_WEB_UI_PORT=8025
+
+__MAILPIT_SMTP_USERNAME="username"
+__MAILPIT_SMTP_PASSWORD="password"
