--- a/libs/mail/tsconfig.lib.json
+++ b/libs/mail/tsconfig.lib.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["test", "**/*.spec.ts", "**/*.test.ts"],
   "compilerOptions": {
     "declaration": true,
-    "outDir": "../../dist/libs/database"
+    "outDir": "../../dist/libs/mail"
   }
 }
