--- a/libs/configuration/tsconfig.lib.json
+++ b/libs/configuration/tsconfig.lib.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../tsconfig.json",
+  "include": ["src/**/*"],
+  "exclude": ["**/*.spec.ts"],
   "compilerOptions": {
     "declaration": true,
     "outDir": "../../dist/libs/configuration"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts"]
+  }
 }
