--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "html-minifier": "^4.0.0",
+    "html-to-text": "^9.0.5",
+    "mjml": "^4.15.3",
     "mongodb": "^6.8.0",
+    "mustache": "^4.2.0",
+    "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
@@ -49,11 +54,17 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/html-minifier": "^4",
+    "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.12",
+    "@types/mjml": "^4",
+    "@types/mustache": "^4",
     "@types/node": "^22.5.0",
+    "@types/nodemailer": "^6",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "axios": "^1.7.7",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
