feat!: setup password-reset
Squashed commit of the following:

commit 2dcc812f551e6de62db96e20cd56abbdb9f3a0ef
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Oct 27 16:19:56 2024 +0400

    refactor: change health-check route

commit b9280f9e001e61bd8287f4bf97ae5880fe7f69ed
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Oct 27 16:16:04 2024 +0400

    test(e2e): add password-reset tests

commit af22a26c42a7ca6f9210d833c5b137680b37078c
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Oct 27 10:23:28 2024 +0400

    test(e2e): add forgot-password tests

commit d8a671d43955b24c74e61ade71481db887bd019a
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Oct 27 08:24:51 2024 +0400

    refactor(test): use predefined route constants & extract mailpit api port

commit b0f79179c1ddba910fece58924d444d47b948e3d
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Oct 26 10:15:56 2024 +0400

    feat!: setup password-reset module in client app

commit 7cec9b8a40c43b40ebeb8a0cada7f6c12f8996b2
Author: Harivansh <leharivansh@gmail.com>
Date:   Tue Oct 8 17:48:05 2024 +0400

    feat: setup mail module

commit 9754f23ae4c6f4a70e6948f91d7cfebdd5f84b9b
Author: Harivansh <leharivansh@gmail.com>
Date:   Tue Oct 8 17:46:24 2024 +0400

    refactor: extract health-check route

commit 320c522ff2f2f3fbfb09d048cf37bd2dcff164a3
Author: Harivansh <leharivansh@gmail.com>
Date:   Tue Oct 8 17:41:35 2024 +0400

    feat!: implement password-reset module

commit dae3c7f2310b6260c8a16aa9be25b24aabf90125
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Oct 6 16:31:26 2024 +0400

    refactor: demote constructor property to argument

commit 4dab591e9ed57784116f9effe9efebe27d8afe09
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Oct 5 13:13:03 2024 +0400

    feat(wip): setup module config & options

commit 00054a61d91450c6d3cf8e52d00605bd18ca3463
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Oct 5 09:14:13 2024 +0400

    doc: update config validation commen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,14 +26,16 @@
     "noUnusedParameters": true,
     "strict": true,
     "paths": {
-      "@application/authentication": ["libs/authentication/src"],
-      "@application/authentication/*": ["libs/authentication/src/*"],
-      "@application/configuration": ["libs/configuration/src"],
-      "@application/configuration/*": ["libs/configuration/src/*"],
-      "@application/database": ["libs/database/src"],
-      "@application/database/*": ["libs/database/src/*"],
-      "@application/mail": ["libs/mail/src"],
-      "@application/mail/*": ["libs/mail/src/*"]
+      "@library/authentication": ["libs/authentication/src"],
+      "@library/authentication/*": ["libs/authentication/src/*"],
+      "@library/configuration": ["libs/configuration/src"],
+      "@library/configuration/*": ["libs/configuration/src/*"],
+      "@library/database": ["libs/database/src"],
+      "@library/database/*": ["libs/database/src/*"],
+      "@library/mail": ["libs/mail/src"],
+      "@library/mail/*": ["libs/mail/src/*"],
+      "@library/password-reset": ["libs/password-reset/src"],
+      "@library/password-reset/*": ["libs/password-reset/src/*"]
     }
   }
 }
