--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/html-minifier": "^4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
     "@types/mjml": "^4",
     "@types/mustache": "^4",
     "@types/node": "^22.5.0",
@@ -71,6 +72,7 @@
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "jest": "^29.7.0",
+    "jsdom": "^25.0.1",
     "lint-staged": "^15.2.9",
     "mongodb-memory-server": "^10.0.0",
     "nest-commander": "^3.15.0",
