--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "helmet": "^8.0.0",
     "html-minifier": "^4.0.0",
     "html-to-text": "^9.0.5",
     "mjml": "^4.15.3",
