--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
+    "@eslint/markdown": "^6.2.1",
     "@faker-js/faker": "^9.1.0",
     "@jest/test-sequencer": "^29.7.0",
     "@nestjs/cli": "^10.4.5",
@@ -54,6 +54,7 @@
     "@nestjs/testing": "^10.4.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cookie-parser": "^1.4.7",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/html-minifier": "^4.0.5",
     "@types/html-to-text": "^9.0.4",
@@ -64,12 +65,8 @@
     "@types/node": "^22.8.2",
     "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.12.2",
-    "@typescript-eslint/parser": "^8.12.2",
     "axios": "^1.7.7",
     "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -81,10 +78,9 @@
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2"
   },
   "packageManager": "yarn@4.5.1"
 }
