--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application",
+  "name": "nestradamus",
   "version": "0.1.0",
   "description": "An opinionated starter project.",
   "author": "Harivansh",
@@ -78,6 +78,7 @@
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
