feat!: implement s3 module
Squashed commit of the following:

commit 5d35b993f416c089a6f6fcbc219bfdee57779ca7
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:52:17 2024 +0400

    fix(cli): granularize module imports

    Use only the required modules instead of the `ApplicationModule`.

commit 165a8f4913db0aee8e659ba00790663c0d8b21a5
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:46:46 2024 +0400

    doc: remove unnecessary comment

commit cd5a4df01ab548de7e090ae1ecb622a1235fd230
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:45:18 2024 +0400

    fix: move `isGlobal` to extras section in config

commit 2b64bbf153d95cf059932b3a582a53006734947c
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:26:08 2024 +0400

    fix: add minio restart-criteria

commit 53d4f868f17fae05e8c7659340b410c198e6825c
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:25:19 2024 +0400

    feat: add s3 module

commit 8fd96899ca7807504db0e33b3208f60d04ca05a7
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 16:18:08 2024 +0400

    doc: add custom endpoint info

commit c1284b8f149517fe63f39c071ee8c98e65d75309
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 15:44:14 2024 +0400

    feat!: add endpoint config option

commit baa6d67327864dc8817ba1487623e17329250a83
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 15:05:27 2024 +0400

    feat!: setup minio

commit 39fa5851e88af02b30374688188e6553ea1c7473
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 11:15:51 2024 +0400

    doc: add config & general info

commit 636e9516ac6cd8b5fd96aa1cf199ed164034246a
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 15 10:42:10 2024 +0400

    test(unit): add s3 service tests

commit 22bec67ab3d5a69fc03ff6b12bbce65e614886de
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 14 19:07:05 2024 +0400

    fix: remove content-type & add @types/multer packages

commit 8a7f

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,16 @@ __MONGODB_PASSWORD="password"
 __MONGODB_DATABASE_NAME="nestradamus"
 
 
+#-------#
+# MinIO #
+#-------#
+__MINIO_API_PORT=9000
+__MINIO_UI_PORT=9001
+
+__MINIO_USERNAME="username"
+__MINIO_PASSWORD="password"
+
+
 #---------#
 # MailPit #
 #---------#
