--- a/apps/client/.env.example
+++ b/apps/client/.env.example
@@ -32,6 +32,19 @@ DATABASE_PASSWORD="${__MONGODB_PASSWORD}"
 DATABASE_NAME="${__MONGODB_DATABASE_NAME}"
 
 
+#----------#
+# (AWS) S3 #
+#----------#
+S3_ACCESS_KEY="${__MINIO_USERNAME}"
+S3_SECRET_KEY="${__MINIO_PASSWORD}"
+
+S3_REGION="af-south-1"
+
+S3_BUCKET_NAME="client-bucket"
+
+S3_DEVELOPMENT_ENDPOINT="http://127.0.0.1:${__MINIO_API_PORT}"
+
+
 #------#
 # Mail #
 #------#
