--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "postinstall": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.689.0",
+    "@aws-sdk/s3-request-presigner": "^3.689.0",
     "@nestjs/common": "^10.4.6",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.6",
@@ -42,6 +44,7 @@
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -61,6 +64,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/mjml": "^4.7.4",
+    "@types/multer": "^1.4.12",
     "@types/mustache": "^4.2.5",
     "@types/node": "^22.8.2",
     "@types/nodemailer": "^6.4.16",
