--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,9 @@
       "@library/mail": ["libs/mail/src"],
       "@library/mail/*": ["libs/mail/src/*"],
       "@library/password-reset": ["libs/password-reset/src"],
-      "@library/password-reset/*": ["libs/password-reset/src/*"]
+      "@library/password-reset/*": ["libs/password-reset/src/*"],
+      "@library/s3": ["libs/s3/src"],
+      "@library/s3/*": ["libs/s3/src/*"]
     }
   }
 }
