feat!: implement authorization library & module
Squashed commit of the following:

commit 55b478eb3c5e0266431010cbe3f65129b764777f
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 29 08:39:15 2024 +0400

    doc: remove todo from readme

commit a531b128a01a3027020951ad0d8cc1bc6d5b4edd
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 29 08:38:54 2024 +0400

    fix: remove task module

commit 6a02ef808efc6de5f3ad12c4d8924f31d1412a30
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 29 08:28:53 2024 +0400

    doc: add permission-string separator config

commit 82f8375e31add8e4d569678b00636743124c4526
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 29 08:27:52 2024 +0400

    refactor: general refactor

commit 9260bb4fd210166776965d5a8707fd986509f176
Author: Harivansh <leharivansh@gmail.com>
Date:   Fri Nov 29 08:08:31 2024 +0400

    refactor: extract permission-string separator into module config

commit 4e71d2abab1cae6ea55aac64249c0d640a2858a4
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 21:22:29 2024 +0400

    fix: make authorization module global

commit 484b75707fea3ccfc3dfd5b6d01b1e66c83038a5
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 21:22:02 2024 +0400

    doc: add readme

commit f46affeddb2b27864d9063ca9d84b86eff07b30d
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 21:01:57 2024 +0400

    doc: add docblock

commit 799103b557dcb846369c88fb8524e5136be5a318
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 20:53:52 2024 +0400

    doc: add docblocks

commit e88a8ddd95476edc25b90f345f9ef3dc54d9266e
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 20:14:11 2024 +0400

    refactor: rename `authorizationDecorator` function to `setPermissions`

commit a1a6e0cc06e0b1619adaf7b30d290a9affc261b2
Author: Harivansh <leharivansh@gmail.com>
Date:   Thu Nov 28 19:57:14 2024 +0400

    test(e2e): add e2e tests

commit 53fa795a447a33e40d6280a10521bff3075f32c3
Author: 

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "format": "prettier --cache --cache-location ./.prettiercache --write .",
     "cli:client": "nest start --path ./apps/client/tsconfig.cli.json --entryFile ./apps/client/cli/main.js --",
+    "repl:client": "nest start --watch --path ./apps/client/tsconfig.app.json --entryFile ./apps/client/src/repl.js --",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
