--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -4,6 +4,6 @@
     "declaration": false,
     "outDir": "../../dist/client"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "environment.d.ts", "request.d.ts"],
   "exclude": ["**/*.spec.ts"]
 }
