feat: implement existence validator-factory
Squashed commit of the following:

commit 790e83d6db27fff0e5bb6c7ab0ba0ab209bf4ccf
Author: Harivansh <leharivansh@gmail.com>
Date:   Sun Dec 8 06:21:18 2024 +0400

    refactor!: expose validator-factory as opposed to validator

commit c5dd72fac6f182ba3979dd6df9649979318f5d8e
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Dec 7 21:58:02 2024 +0400

    doc: update readme

commit 567b99bf08edc7e82cde53f91c3194709edf507a
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Dec 7 21:09:10 2024 +0400

    test(e2e): add entity existence validation tests

commit d619108f53dc7c103db9ba9a68c66774878650d1
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Dec 7 16:05:56 2024 +0400

    refactor: reorganize variables declaration

commit ea74d086288914d3fae35e8776c8a0d5377390e8
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Dec 7 15:21:53 2024 +0400

    test(e2e): add email existence test during user update

commit 4c9b7c9466c59b2ff02289eafd73751c6865aca0
Author: Harivansh <leharivansh@gmail.com>
Date:   Sat Dec 7 15:13:59 2024 +0400

    feat: implement existence validator

--- a/libs/database/tsconfig.lib.json
+++ b/libs/database/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["test", "**/*.spec.ts", "**/*.test.ts"],
   "compilerOptions": {
     "declaration": true,
     "outDir": "../../dist/libs/database"
