feat!: automatically create minio bucket on compose init

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ __MINIO_UI_PORT=9001
 __MINIO_USERNAME="username"
 __MINIO_PASSWORD="password"
 
+__MINIO_BUCKET_NAME="nestradamus"
+
 
 #---------#
 # MailPit #
