--- a/apps/client/.env.example
+++ b/apps/client/.env.example
@@ -40,7 +40,7 @@ S3_SECRET_KEY="${__MINIO_PASSWORD}"
 
 S3_REGION="af-south-1"
 
-S3_BUCKET_NAME="client-bucket"
+S3_BUCKET_NAME="${__MINIO_BUCKET_NAME}"
 
 S3_DEVELOPMENT_ENDPOINT="http://127.0.0.1:${__MINIO_API_PORT}"
 
